--- a/index.html
+++ b/index.html
@@ -6,97 +6,174 @@
     <style>
       body { text-align: center; font-family: 'Noto Sans KR', sans-serif; background-color: #2e2b26; color: #f0e6d2; margin: 0; padding: 0; }
       #login-screen { display: flex; flex-direction: column; justify-content: center; height: 100vh; align-items: center; }
-      input { padding: 15px; font-size: 20px; border-radius: 5px; margin-bottom: 20px; width: 80%; max-width: 300px; }
-      .btn-custom { padding: 15px 30px; font-size: 22px; background-color: #a63737; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; }
-      #game-screen { display: none !important; max-width: 600px; margin: 0 auto; padding: 10px; height: 100vh; flex-direction: column; }
-      #game-log { background: rgba(0,0,0,0.3); height: 15vh; overflow-y: auto; padding: 10px; border-radius: 10px; font-size: 14px; margin-bottom: 5px; text-align: left; }
+      input { padding: 15px; font-size: 20px; border-radius: 5px; border: 2px solid #8c7b6c; background-color: #4a4036; color: white; text-align: center; margin-bottom: 20px; width: 80%; max-width: 300px; }
+      .btn-custom { padding: 15px 30px; font-size: 22px; background-color: #a63737; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; box-shadow: 0 4px 10px rgba(0,0,0,0.4); }
+      #game-screen { display: none !important; max-width: 600px; margin: 0 auto; padding: 10px; height: 100vh; flex-direction: column; box-sizing: border-box; }
+      #top-bar { display: flex; flex-direction: column; background: rgba(0,0,0,0.4); border-radius: 10px; margin-bottom: 5px; padding: 10px; border: 1px solid #5c5042; }
+      #game-log { background: rgba(0,0,0,0.3); height: 15vh; overflow-y: auto; padding: 10px; border-radius: 10px; font-size: 14px; margin-bottom: 5px; text-align: left; border: 1px solid #5c5042; }
+      .log-item { margin-bottom: 4px; border-bottom: 1px solid rgba(255,255,255,0.1); }
       #hand-container { display: flex; justify-content: center; gap: 10px; flex: 1; align-items: center; }
-      .card { background: #f5f0e1; color: #2e2b26; width: 140px; height: 210px; border-radius: 10px; display: flex; flex-direction: column; align-items: center; justify-content: center; border: 4px solid #d4c5a9; cursor: pointer; }
+      .card { background: #f5f0e1; color: #2e2b26; width: 150px; height: 230px; border-radius: 10px; display: flex; flex-direction: column; align-items: center; justify-content: center; border: 4px solid #d4c5a9; cursor: pointer; text-align: center; padding: 6px; box-shadow: 0 5px 15px rgba(0,0,0,0.6); }
+      .card-name { font-size: 30px; margin-bottom: 8px; font-family: "Gungsuh", serif; }
+      .card-desc { font-size: 14px; font-weight: normal; word-break: keep-all; }
       .card.disabled { opacity: 0.5; filter: grayscale(1); cursor: not-allowed; }
+      #mini-card-area { background: rgba(0,0,0,0.2); border-radius: 10px; padding: 10px 8px; margin-top: auto; border: 1px solid #5c5042; }
+      .mini-card-wrap { display: flex; flex-wrap: wrap; justify-content: center; gap: 6px; }
+      .mini-card { width: 22%; max-width: 80px; height: 60px; background: #5c5042; color: #e0d0b8; border-radius: 5px; display: flex; flex-direction: column; align-items: center; justify-content: center; font-size: 11px; cursor: pointer; border: 1px solid #3d342b; }
+      .mini-card.out { background: #2b2520; color: #555; }
       .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); flex-direction: column; justify-content: center; align-items: center; z-index: 100; }
-      .overlay-btn { padding: 15px; margin: 5px; width: 80%; max-width: 200px; background: #4a4036; color: white; border: 1px solid #8c7b6c; border-radius: 5px; }
-      #notice-box { background: #2e2b26; border: 2px solid #e6b322; padding: 20px; border-radius: 10px; width: 250px; }
+      .overlay-btn { padding: 15px; margin: 5px; width: 85%; max-width: 250px; background: #4a4036; color: white; border: 1px solid #8c7b6c; border-radius: 5px; font-size: 18px; }
+      #notice-box { background: #2e2b26; border: 2px solid #e6b322; padding: 20px; border-radius: 10px; width: 80%; max-width: 300px; text-align: center; }
     </style>
   </head>
   <body>
     <div id="login-screen">
-      <h1 style="color: #e6b322; font-family: 'Gungsuh';">조선시대 러브레터</h1>
+      <h1 style="color: #e6b322; font-size: 45px; font-family: 'Gungsuh';">조선시대<br>러브레터</h1>
       <input type="text" id="nickname" placeholder="이름을 입력하시오" />
       <button class="btn-custom" onclick="joinGame()">입장하기</button>
     </div>
 
     <div id="game-screen">
+      <div id="top-bar">
+        <div style="display: flex; justify-content: space-between;">
+          <span id="room-info-display">방: 1 (<span id="player-count">0</span>/4)</span>
+          <button id="start-btn" onclick="requestStart()" style="display:none; background:#3e6b46; color:white; border:none; border-radius:5px; padding:5px 10px; font-weight:bold;">▶ 게임 시작</button>
+        </div>
+        <div id="player-names-box" style="font-size:12px; margin-top:5px; text-align:left; color:#9c8e7e;">대기 중...</div>
+      </div>
       <div id="game-log"></div>
-      <div id="turn-info" style="font-size: 20px; color: #e6b322; margin: 10px 0;">대기 중...</div>
+      <div id="turn-info">대기 중...</div>
       <div id="hand-container">
         <div class="card disabled" id="card0" onclick="clickCard(0)"></div>
         <div class="card disabled" id="card1" onclick="clickCard(1)"></div>
       </div>
+      <div id="mini-card-area">
+        <div style="font-size:12px; color:#e6b322; margin-bottom:5px;">📋 남은 카드 (클릭 시 능력 확인)</div>
+        <div id="mini-card-container" class="mini-card-wrap"></div>
+      </div>
     </div>
 
     <div id="target-overlay" class="overlay">
-      <h2 style="color: white;">누구를 지목하시겠습니까?</h2>
-      <div id="target-buttons"></div>
-      <button class="btn-custom" style="margin-top:20px; font-size: 16px;" onclick="closeOverlay()">취소</button>
+      <h2 style="color: #f0e6d2;">누구를 지목하시겠습니까?</h2>
+      <div id="target-buttons" style="display:flex; flex-direction:column; align-items:center; width:100%;"></div>
+      <button class="btn-custom" style="margin-top:20px; background:#333; font-size:16px;" onclick="closeOverlay()">취소</button>
+    </div>
+
+    <div id="guess-overlay" class="overlay">
+      <h2 style="color: #f0e6d2;">상대의 카드는?</h2>
+      <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:10px;">
+        <button class="overlay-btn" style="width:40%; background:#e6b322; color:black; font-weight:bold;" onclick="submitMove('🎭광대(2)')">🎭광대(2)</button>
+        <button class="overlay-btn" style="width:40%; background:#e6b322; color:black; font-weight:bold;" onclick="submitMove('⚔️검객(3)')">⚔️검객(3)</button>
+        <button class="overlay-btn" style="width:40%; background:#e6b322; color:black; font-weight:bold;" onclick="submitMove('💊의녀(4)')">💊의녀(4)</button>
+        <button class="overlay-btn" style="width:40%; background:#e6b322; color:black; font-weight:bold;" onclick="submitMove('🗡️자객(5)')">🗡️자객(5)</button>
+        <button class="overlay-btn" style="width:40%; background:#e6b322; color:black; font-weight:bold;" onclick="submitMove('👑임금(6)')">👑임금(6)</button>
+        <button class="overlay-btn" style="width:40%; background:#e6b322; color:black; font-weight:bold;" onclick="submitMove('🌺후궁(7)')">🌺후궁(7)</button>
+        <button class="overlay-btn" style="width:40%; background:#e6b322; color:black; font-weight:bold;" onclick="submitMove('👸왕비(8)')">👸왕비(8)</button>
+      </div>
+      <button class="btn-custom" style="margin-top:20px; background:#333; font-size:16px;" onclick="closeOverlay()">취소</button>
     </div>
 
     <div id="notice-overlay" class="overlay">
       <div id="notice-box">
-        <div id="notice-text" style="color: white; margin-bottom: 20px;"></div>
-        <button class="btn-custom" style="font-size: 14px;" onclick="closeOverlay()">확인</button>
+        <div id="notice-text" style="color: white; margin-bottom: 20px; line-height:1.4;"></div>
+        <button class="btn-custom" style="font-size: 16px; padding:10px 20px;" onclick="closeOverlay()">확인</button>
       </div>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
-      var myHand = [], currentPlayers = [], isMyTurn = false, selectedCardIdx = -1, myName = "";
+      var myHand = [], currentPlayers = [], isMyTurn = false, selectedCardIdx = -1, myName = "", selectedTarget = "";
+      const cardDescriptions = { "1":"포졸", "2":"상대 패 확인", "3":"숫자 비교 대결", "4":"다음 턴까지 보호", "5":"강제로 패 버리기", "6":"패 맞바꾸기", "7":"자객/임금과 있을 때 우선 버림", "8":"버려지면 패배" };
 
       function joinGame() {
         myName = document.getElementById('nickname').value;
-        if(!myName) return alert("이름을 적으시오!");
+        if(!myName) return alert("이름을 입력하시오!");
         socket.emit('login', { name: myName });
         document.getElementById('login-screen').style.display = 'none';
         document.getElementById('game-screen').style.setProperty('display', 'flex', 'important');
       }
 
+      function requestStart() { socket.emit('requestStart'); }
+
       socket.on('roomInfo', (data) => {
         currentPlayers = data.playerStates || [];
-        document.getElementById('turn-info').innerText = data.isStarted ? "게임 진행 중" : "모두 오면 시작을 누르시오";
+        document.getElementById('player-count').innerText = data.count;
+        document.getElementById('player-names-box').innerText = "명단: " + currentPlayers.map(p => p.isEliminated ? `[탈락]${p.name}` : p.name).join(', ');
+        document.getElementById('start-btn').style.display = (data.count >= 2 && !data.isStarted) ? 'block' : 'none';
+        if(!data.isStarted) document.getElementById('turn-info').innerText = "모두 오면 시작을 누르시오";
+      });
+
+      socket.on('gameLog', (msg) => {
+        const box = document.getElementById('game-log');
+        box.innerHTML += `<div class="log-item">${msg}</div>`;
+        box.scrollTop = box.scrollHeight;
       });
 
       socket.on('turnUpdate', (data) => {
         isMyTurn = (data.turnId === socket.id);
-        document.getElementById('turn-info').innerText = isMyTurn ? "🔥 당신의 차례!" : `⏳ ${data.turnName} 차례`;
+        const info = document.getElementById('turn-info');
+        info.innerText = isMyTurn ? "🔥 당신의 차례입니다! 🔥" : `⏳ ${data.turnName} 님의 차례`;
+        info.style.color = isMyTurn ? "#e6b322" : "#aaa";
         document.querySelectorAll('.card').forEach(c => isMyTurn ? c.classList.remove('disabled') : c.classList.add('disabled'));
       });
 
       socket.on('updateHand', (cards) => {
         myHand = cards;
-        const render = (id, c) => document.getElementById(id).innerHTML = c ? `<div style="font-size:24px;">${c}</div>` : "";
+        const cardNames = { "1":"포졸", "2":"광대", "3":"검객", "4":"의녀", "5":"자객", "6":"임금", "7":"후궁", "8":"왕비" };
+        const render = (id, cardStr) => {
+          const el = document.getElementById(id);
+          if(!cardStr) { el.innerHTML = ""; return; }
+          const num = cardStr.replace(/[^0-9]/g, "");
+          el.innerHTML = `<div class="card-name">${cardStr}</div><div class="card-desc">${cardDescriptions[num]}</div>`;
+        };
         render('card0', myHand[0]); render('card1', myHand[1]);
       });
+
+      socket.on('updateCardStats', (stats) => {
+        let html = "";
+        stats.forEach(item => {
+          html += `<div class="mini-card ${item.remaining === 0 ? 'out' : ''}" onclick="showCardInfo('${item.num}', '${item.name}')">
+            <div style="font-size:9px;">(${item.num})</div><div>${item.name}</div>
+            <div style="font-size:9px;">${item.remaining}/${item.total}</div>
+          </div>`;
+        });
+        document.getElementById('mini-card-container').innerHTML = html;
+      });
+
+      function showCardInfo(num, name) {
+        const descs = { "1":"상대 1명을 지목해 카드 번호를 추측합니다(포졸 제외). 맞히면 상대는 즉시 탈락!", "2":"상대 1명의 카드를 몰래 확인합니다.", "3":"상대 1명과 숫자를 비교합니다. 숫자가 낮은 사람이 탈락합니다.", "4":"다음 내 차례 전까지 다른 플레이어의 공격을 받지 않습니다.", "5":"자신 또는 상대 1명을 지목해 가진 카드를 버리고 새로 뽑습니다.", "6":"상대 1명과 카드를 서로 맞바꿉니다.", "7":"5번 또는 6번 카드가 손에 있다면 반드시 이 카드를 먼저 버려야 합니다.", "8":"절대 버릴 수 없습니다. 버려지면 즉시 패배합니다." };
+        document.getElementById('notice-text').innerHTML = `<b style="color:#e6b322">${name}(${num})</b><br><br>${descs[num]}`;
+        document.getElementById('notice-overlay').style.display = 'flex';
+      }
 
       function clickCard(idx) {
         if(!isMyTurn || !myHand[idx]) return;
         selectedCardIdx = idx;
         const card = myHand[idx];
         if(card.includes("의녀") || card.includes("후궁") || card.includes("왕비")) {
-          socket.emit('playCard', { card, target: "" });
+          selectedTarget = ""; submitMove(null);
         } else {
           let html = "";
           currentPlayers.forEach(p => {
             if(p.name !== myName && !p.isEliminated) {
-              html += `<button class="overlay-btn" onclick="sendMove('${p.name}')">${p.name}</button>`;
+              html += `<button class="overlay-btn" onclick="selectTarget('${p.name}')">${p.name}</button>`;
             }
           });
-          document.getElementById('target-buttons').innerHTML = html || "지목할 생존자가 없소.";
+          document.getElementById('target-buttons').innerHTML = html || "지목할 생존자가 없습니다.";
           document.getElementById('target-overlay').style.display = 'flex';
         }
       }
 
-      function sendMove(target) {
-        socket.emit('playCard', { card: myHand[selectedCardIdx], target: target });
+      function selectTarget(name) {
+        selectedTarget = name;
+        document.getElementById('target-overlay').style.display = 'none';
+        if(myHand[selectedCardIdx].includes("포졸")) document.getElementById('guess-overlay').style.display = 'flex';
+        else submitMove(null);
+      }
+
+      function submitMove(guess) {
+        socket.emit('playCard', { card: myHand[selectedCardIdx], target: selectedTarget, guess: guess });
         closeOverlay();
       }
 
