--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
         #top-bar { display: flex; flex-direction: column; background: rgba(0,0,0,0.4); border-radius: 10px; margin-bottom: 5px; padding: 10px; border: 1px solid #5c5042; }
         #game-log { background: rgba(0,0,0,0.3); height: 15vh; overflow-y: auto; padding: 10px; border-radius: 10px; font-size: 13px; margin-bottom: 5px; text-align: left; border: 1px solid #5c5042; }
         #hand-container { display: flex; justify-content: center; gap: 10px; flex: 1; align-items: center; }
-        .card { background: #f5f0e1; color: #2e2b26; width: 140px; height: 210px; border-radius: 10px; display: flex; flex-direction: column; align-items: center; justify-content: center; border: 4px solid #d4c5a9; cursor: pointer; font-weight: bold; font-size: 20px; }
+        
+        /* 카드 디자인 수정 */
+        .card { background: #f5f0e1; color: #2e2b26; width: 160px; height: 240px; border-radius: 12px; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; border: 5px solid #d4c5a9; cursor: pointer; padding: 15px 10px; box-sizing: border-box; }
+        .card-num { font-size: 32px; font-weight: bold; color: #a63737; margin-bottom: 5px; }
+        .card-name { font-size: 20px; font-weight: bold; margin-bottom: 15px; border-bottom: 1px solid #d4c5a9; width: 100%; padding-bottom: 5px; }
+        .card-desc { font-size: 13px; color: #4a4036; line-height: 1.4; word-break: keep-all; font-weight: 500; }
         .card.disabled { opacity: 0.5; filter: grayscale(1); }
+
         #mini-card-area { background: rgba(0,0,0,0.2); border-radius: 10px; padding: 10px; margin-top: auto; }
         .mini-card-wrap { display: flex; flex-wrap: wrap; justify-content: center; gap: 5px; }
         .mini-card { width: 22%; height: 50px; background: #5c5042; color: #e0d0b8; border-radius: 5px; display: flex; flex-direction: column; align-items: center; justify-content: center; font-size: 10px; border: 1px solid #3d342b; }
@@ -32,13 +38,13 @@
     <div id="game-screen">
         <div id="top-bar">
             <div style="display: flex; justify-content: space-between;">
-                <span id="room-info-display">대기실 (<span id="player-count">0</span>/4)</span>
-                <button id="start-btn" onclick="requestStart()" style="display:none; background:#3e6b46; color:white; border:none; padding:5px 10px;">게임 시작</button>
+                <span id="room-info-display">방 1 (<span id="player-count">0</span>/4)</span>
+                <button id="start-btn" onclick="requestStart()" style="display:none; background:#3e6b46; color:white; border:none; padding:5px 10px; border-radius:5px;">게임 시작</button>
             </div>
             <div id="player-names-box" style="font-size:12px; margin-top:5px; color:#9c8e7e;"></div>
         </div>
         <div id="game-log"></div>
-        <div id="turn-info" style="color:#e6b322; margin-bottom:10px;">대기 중...</div>
+        <div id="turn-info" style="color:#e6b322; font-weight:bold; margin-bottom:5px;">대기 중...</div>
         <div id="hand-container">
             <div class="card disabled" id="card0" onclick="clickCard(0)"></div>
             <div class="card disabled" id="card1" onclick="clickCard(1)"></div>
@@ -49,14 +55,14 @@
     </div>
 
     <div id="target-overlay" class="overlay">
-        <h2 style="color: #f0e6d2;">대상을 선택하시오</h2>
+        <h2 style="color: #f0e6d2;">누구를 지목하시겠습니까?</h2>
         <div id="target-buttons" style="width:100%; display:flex; flex-direction:column; align-items:center;"></div>
         <button class="overlay-btn" style="background:#222;" onclick="closeOverlay()">취소</button>
     </div>
 
     <div id="guess-overlay" class="overlay">
-        <h2 style="color: #f0e6d2;">상대의 카드는?</h2>
-        <div id="guess-buttons" style="display:grid; grid-template-columns: 1fr 1fr; gap:5px; width:80%;">
+        <h2 style="color: #f0e6d2;">상대의 카드를 추측하시오</h2>
+        <div id="guess-buttons" style="display:grid; grid-template-columns: 1fr 1fr; gap:5px; width:85%;">
             <button class="overlay-btn" onclick="submitPlay('2')">광대(2)</button>
             <button class="overlay-btn" onclick="submitPlay('3')">검객(3)</button>
             <button class="overlay-btn" onclick="submitPlay('4')">의녀(4)</button>
@@ -73,6 +79,17 @@
         const socket = io();
         let myName = "", myHand = [], isMyTurn = false, selectedCard = "", players = [];
 
+        const cardData = {
+            "1": { name: "포졸", desc: "상대 1명을 지목해 카드 숫자를 맞추면 상대 탈락 (포졸 제외)" },
+            "2": { name: "광대", desc: "상대 1명을 지목해 패를 몰래 봅니다." },
+            "3": { name: "검객", desc: "상대와 패를 비교해 낮은 쪽이 탈락합니다." },
+            "4": { name: "의녀", desc: "내 다음 턴까지 모든 공격을 막아냅니다." },
+            "5": { name: "자객", desc: "상대 1명을 지목해 패를 버리고 새로 뽑게 합니다." },
+            "6": { name: "임금", desc: "상대 1명과 내 패를 서로 바꿉니다." },
+            "7": { name: "후궁", desc: "임금(6)이나 자객(5)과 함께 있으면 반드시 이 카드를 버려야 함" },
+            "8": { name: "왕비", desc: "이 카드를 버리면 즉시 탈락합니다." }
+        };
+
         function joinGame() {
             myName = document.getElementById('nickname').value;
             if(!myName) return alert("이름을 입력하시오!");
@@ -87,8 +104,18 @@
             myHand = hand;
             for(let i=0; i<2; i++) {
                 const el = document.getElementById('card' + i);
-                if(myHand[i]) { el.innerText = myHand[i]; el.classList.remove('disabled'); }
-                else { el.innerText = "없음"; el.classList.add('disabled'); }
+                if(myHand[i]) {
+                    const num = myHand[i].match(/\d+/)[0];
+                    el.innerHTML = `
+                        <div class="card-num">${num}</div>
+                        <div class="card-name">${cardData[num].name}</div>
+                        <div class="card-desc">${cardData[num].desc}</div>
+                    `;
+                    el.classList.remove('disabled');
+                } else {
+                    el.innerHTML = "";
+                    el.classList.add('disabled');
+                }
             }
         });
 
@@ -135,7 +162,6 @@
                         container.appendChild(btn);
                     }
                 });
-                // 예외: 타겟 잡을 상대가 없으면 자신을 선택하거나 무효처리 (러브레터 규칙)
                 if(container.innerHTML === "") selectTarget(myName); 
                 else document.getElementById('target-overlay').style.display = 'flex';
             } else {
