--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
     <title>조선시대 러브레터</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
-        body { text-align: center; font-family: 'Noto Sans KR', sans-serif; background-color: #2e2b26; color: #f0e6d2; margin: 0; padding: 0; overflow: hidden; }
+        body { text-align: center; font-family: 'Noto Sans KR', sans-serif; background-color: #2e2b26; color: #f0e6d2; margin: 0; padding: 0; }
         #login-screen { display: flex; flex-direction: column; justify-content: center; height: 100vh; align-items: center; }
         input { padding: 15px; font-size: 20px; border-radius: 5px; border: 2px solid #8c7b6c; background-color: #4a4036; color: white; text-align: center; margin-bottom: 20px; width: 80%; max-width: 300px; }
-        .btn-custom { padding: 15px 30px; font-size: 22px; background-color: #a63737; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; }
+        .btn-custom { padding: 15px 30px; font-size: 22px; background-color: #a63737; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; box-shadow: 0 4px 10px rgba(0,0,0,0.4); }
         #game-screen { display: none; max-width: 600px; margin: 0 auto; padding: 10px; height: 100vh; flex-direction: column; box-sizing: border-box; }
         #top-bar { display: flex; flex-direction: column; background: rgba(0,0,0,0.4); border-radius: 10px; margin-bottom: 5px; padding: 10px; border: 1px solid #5c5042; }
-        #game-log { background: rgba(0,0,0,0.3); height: 15vh; overflow-y: auto; padding: 10px; border-radius: 10px; font-size: 13px; margin-bottom: 5px; text-align: left; border: 1px solid #5c5042; }
+        #game-log { background: rgba(0,0,0,0.3); height: 15vh; overflow-y: auto; padding: 10px; border-radius: 10px; font-size: 14px; margin-bottom: 5px; text-align: left; border: 1px solid #5c5042; }
+        .log-item { margin-bottom: 4px; border-bottom: 1px solid rgba(255,255,255,0.1); }
         #hand-container { display: flex; justify-content: center; gap: 10px; flex: 1; align-items: center; }
         
-        /* 카드 디자인 수정 */
-        .card { background: #f5f0e1; color: #2e2b26; width: 160px; height: 240px; border-radius: 12px; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; border: 5px solid #d4c5a9; cursor: pointer; padding: 15px 10px; box-sizing: border-box; }
-        .card-num { font-size: 32px; font-weight: bold; color: #a63737; margin-bottom: 5px; }
-        .card-name { font-size: 20px; font-weight: bold; margin-bottom: 15px; border-bottom: 1px solid #d4c5a9; width: 100%; padding-bottom: 5px; }
-        .card-desc { font-size: 13px; color: #4a4036; line-height: 1.4; word-break: keep-all; font-weight: 500; }
-        .card.disabled { opacity: 0.5; filter: grayscale(1); }
+        /* 기존 디자인 유지 + 설명글 최적화 */
+        .card { background: #f5f0e1; color: #2e2b26; width: 150px; height: 230px; border-radius: 10px; display: flex; flex-direction: column; align-items: center; justify-content: center; border: 4px solid #d4c5a9; cursor: pointer; text-align: center; padding: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.6); box-sizing: border-box; }
+        .card-name { font-size: 26px; margin-bottom: 8px; font-family: "Gungsuh", serif; font-weight: bold; }
+        .card-desc { font-size: 13px; font-weight: normal; word-break: keep-all; line-height: 1.3; color: #333; }
+        .card.disabled { opacity: 0.5; filter: grayscale(1); cursor: not-allowed; }
 
-        #mini-card-area { background: rgba(0,0,0,0.2); border-radius: 10px; padding: 10px; margin-top: auto; }
-        .mini-card-wrap { display: flex; flex-wrap: wrap; justify-content: center; gap: 5px; }
-        .mini-card { width: 22%; height: 50px; background: #5c5042; color: #e0d0b8; border-radius: 5px; display: flex; flex-direction: column; align-items: center; justify-content: center; font-size: 10px; border: 1px solid #3d342b; }
+        #mini-card-area { background: rgba(0,0,0,0.2); border-radius: 10px; padding: 10px 8px; margin-top: auto; border: 1px solid #5c5042; }
+        .mini-card-wrap { display: flex; flex-wrap: wrap; justify-content: center; gap: 6px; }
+        .mini-card { width: 22%; max-width: 80px; height: 60px; background: #5c5042; color: #e0d0b8; border-radius: 5px; display: flex; flex-direction: column; align-items: center; justify-content: center; font-size: 11px; cursor: pointer; border: 1px solid #3d342b; }
         .mini-card.out { background: #2b2520; color: #555; }
-        .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); flex-direction: column; justify-content: center; align-items: center; z-index: 100; }
-        .overlay-btn { padding: 12px; margin: 5px; width: 80%; background: #4a4036; color: white; border: 1px solid #8c7b6c; border-radius: 5px; font-size: 16px; }
+        .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); flex-direction: column; justify-content: center; align-items: center; z-index: 100; }
+        .overlay-btn { padding: 15px; margin: 5px; width: 85%; max-width: 250px; background: #4a4036; color: white; border: 1px solid #8c7b6c; border-radius: 5px; font-size: 18px; }
     </style>
 </head>
 <body>
     <div id="login-screen">
-        <h1 style="color: #e6b322; font-family: 'Gungsuh';">조선시대 러브레터</h1>
+        <h1 style="color: #e6b322; font-size: 45px; font-family: 'Gungsuh';">조선시대<br>러브레터</h1>
         <input type="text" id="nickname" placeholder="이름을 입력하시오" />
         <button class="btn-custom" onclick="joinGame()">입장하기</button>
     </div>
@@ -38,30 +38,31 @@
     <div id="game-screen">
         <div id="top-bar">
             <div style="display: flex; justify-content: space-between;">
-                <span id="room-info-display">방 1 (<span id="player-count">0</span>/4)</span>
-                <button id="start-btn" onclick="requestStart()" style="display:none; background:#3e6b46; color:white; border:none; padding:5px 10px; border-radius:5px;">게임 시작</button>
+                <span id="room-info-display">방: 1 (<span id="player-count">0</span>/4)</span>
+                <button id="start-btn" onclick="requestStart()" style="display:none; background:#3e6b46; color:white; border:none; border-radius:5px; padding:5px 10px; font-weight:bold;">▶ 게임 시작</button>
             </div>
-            <div id="player-names-box" style="font-size:12px; margin-top:5px; color:#9c8e7e;"></div>
+            <div id="player-names-box" style="font-size:12px; margin-top:5px; text-align:left; color:#9c8e7e;">대기 중...</div>
         </div>
         <div id="game-log"></div>
-        <div id="turn-info" style="color:#e6b322; font-weight:bold; margin-bottom:5px;">대기 중...</div>
+        <div id="turn-info" style="color:#e6b322; margin-bottom:5px;">대기 중...</div>
         <div id="hand-container">
             <div class="card disabled" id="card0" onclick="clickCard(0)"></div>
             <div class="card disabled" id="card1" onclick="clickCard(1)"></div>
         </div>
         <div id="mini-card-area">
+            <div style="font-size:12px; color:#e6b322; margin-bottom:5px;">📋 남은 카드 정보</div>
             <div id="mini-card-container" class="mini-card-wrap"></div>
         </div>
     </div>
 
     <div id="target-overlay" class="overlay">
-        <h2 style="color: #f0e6d2;">누구를 지목하시겠습니까?</h2>
-        <div id="target-buttons" style="width:100%; display:flex; flex-direction:column; align-items:center;"></div>
-        <button class="overlay-btn" style="background:#222;" onclick="closeOverlay()">취소</button>
+        <h2 style="color: #f0e6d2;">대상 플레이어 선택</h2>
+        <div id="target-buttons" style="display:flex; flex-direction:column; align-items:center; width:100%;"></div>
+        <button class="overlay-btn" style="background:#333;" onclick="closeOverlay()">취소</button>
     </div>
 
     <div id="guess-overlay" class="overlay">
-        <h2 style="color: #f0e6d2;">상대의 카드를 추측하시오</h2>
+        <h2 style="color: #f0e6d2;">상대의 카드는?</h2>
         <div id="guess-buttons" style="display:grid; grid-template-columns: 1fr 1fr; gap:5px; width:85%;">
             <button class="overlay-btn" onclick="submitPlay('2')">광대(2)</button>
             <button class="overlay-btn" onclick="submitPlay('3')">검객(3)</button>
@@ -71,7 +72,7 @@
             <button class="overlay-btn" onclick="submitPlay('7')">후궁(7)</button>
             <button class="overlay-btn" onclick="submitPlay('8')">왕비(8)</button>
         </div>
-        <button class="overlay-btn" style="background:#222;" onclick="closeOverlay()">취소</button>
+        <button class="overlay-btn" style="background:#333;" onclick="closeOverlay()">취소</button>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
@@ -79,15 +80,15 @@
         const socket = io();
         let myName = "", myHand = [], isMyTurn = false, selectedCard = "", players = [];
 
-        const cardData = {
-            "1": { name: "포졸", desc: "상대 1명을 지목해 카드 숫자를 맞추면 상대 탈락 (포졸 제외)" },
-            "2": { name: "광대", desc: "상대 1명을 지목해 패를 몰래 봅니다." },
-            "3": { name: "검객", desc: "상대와 패를 비교해 낮은 쪽이 탈락합니다." },
-            "4": { name: "의녀", desc: "내 다음 턴까지 모든 공격을 막아냅니다." },
-            "5": { name: "자객", desc: "상대 1명을 지목해 패를 버리고 새로 뽑게 합니다." },
-            "6": { name: "임금", desc: "상대 1명과 내 패를 서로 바꿉니다." },
-            "7": { name: "후궁", desc: "임금(6)이나 자객(5)과 함께 있으면 반드시 이 카드를 버려야 함" },
-            "8": { name: "왕비", desc: "이 카드를 버리면 즉시 탈락합니다." }
+        const cardInfo = {
+            "1": { name: "포졸", desc: "지목한 상대의 패가 내가 말한 숫자면 상대 탈락(1 제외)" },
+            "2": { name: "광대", desc: "지목한 상대의 패를 나만 몰래 봅니다." },
+            "3": { name: "검객", desc: "상대와 패 비교, 낮은 숫자가 탈락합니다." },
+            "4": { name: "의녀", desc: "다음 내 차례 전까지 모든 공격을 막습니다." },
+            "5": { name: "자객", desc: "지목한 상대는 패를 버리고 새로 뽑습니다." },
+            "6": { name: "임금", desc: "지목한 상대와 내 패를 서로 바꿉니다." },
+            "7": { name: "후궁", desc: "임금/자객과 함께 있으면 무조건 버려야 합니다." },
+            "8": { name: "왕비", desc: "버려지는 순간 즉시 탈락합니다." }
         };
 
         function joinGame() {
@@ -106,14 +107,10 @@
                 const el = document.getElementById('card' + i);
                 if(myHand[i]) {
                     const num = myHand[i].match(/\d+/)[0];
-                    el.innerHTML = `
-                        <div class="card-num">${num}</div>
-                        <div class="card-name">${cardData[num].name}</div>
-                        <div class="card-desc">${cardData[num].desc}</div>
-                    `;
+                    el.innerHTML = `<div class="card-name">${cardInfo[num].name}(${num})</div><div class="card-desc">${cardInfo[num].desc}</div>`;
                     el.classList.remove('disabled');
                 } else {
-                    el.innerHTML = "";
+                    el.innerHTML = "패 없음";
                     el.classList.add('disabled');
                 }
             }
@@ -130,12 +127,12 @@
 
         socket.on('turnUpdate', (data) => {
             isMyTurn = (data.turnName === myName);
-            document.getElementById('turn-info').innerText = isMyTurn ? "🔴 당신의 차례입니다!" : `⌛ ${data.turnName}의 차례...`;
+            document.getElementById('turn-info').innerText = isMyTurn ? "🔴 당신의 차례!" : `⌛ ${data.turnName}의 차례...`;
         });
 
         socket.on('gameLog', (msg) => {
             const log = document.getElementById('game-log');
-            log.innerHTML += `<div>${msg}</div>`;
+            log.innerHTML += `<div class="log-item">${msg}</div>`;
             log.scrollTop = log.scrollHeight;
         });
 
